# manim-automata

./: .gitignore  LICENSE.txt  README.md  README.rst  calculatingbasis-0,0.jff  custom_manim_animations.py  dev_example.py  example.py  pushdown_automaton.jff  pyproject.toml  recorded_path.txt  sandbox.py  testmachine.jff  testmachine2.jff  user_examples.py  x_contains_a_1_in_third_final_position.jff
.github/workflows/: release.yaml
custom_animations_help/: manim_animations.py
example_machines/: NFA.jff
manim_automata_examples/: examples.py
manim_automata_examples/example_machine_files/: NFA.jff  finite_automaton.jff
media/Tex/: 73068ab48ca8b4c1.tex
media/videos/sandbox/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
src/manim_automata/: __init__.py  automata.py  automata_animations.py  directed_graph_algorithm.py  xml_parser.py
src/manim_automata/automata/: automata.py  xml_parser.py
src/manim_automata/automata_dependencies/: automata.py  xml_parser.py
src/manim_automata/mobjects/: __init__.py  automaton_animation.py  automaton_mobject.py  dotgrid.py  manim_animations.py  manim_automaton.py  manim_automaton_input.py  manim_cli.py  manim_determinstic_finite_state_automaton.py  manim_finite_state_automaton.py  manim_non_determinstic_finite_state_automaton.py  manim_pushdown_automaton.py  manim_state.py  manim_transition.py  manim_turing_machine.py
src/manim_automata/mobjects/automata_dependencies/: automata.py  state.py  transitition.py  xml_parser.py
tests/: test_automata.py  test_manim_automata.py
