[tool.poetry]
name = "manim-automata"
version = "0.1.0"
description = ""
authors = ["Sean Nelson <snelson01010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "0.13.0"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"
pytest = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_automata" = "module:object.attr"


